# eq-management-platform

./: .gitignore  README.md  docker-compose.yml  nginx.conf  start.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.sql
backend/alembic/: env.py
backend/alembic/versions/: 8f4a2c1b0d3e_add_users_table_for_auth.py  9b3c4d5e6f7a_add_ticket_created_by_id.py  b2c3d4e5f6a7_teams_projects_rbac.py  c1d2e3f4a5b6_add_audit_logs_table.py  d4e5f6a7b8c9_add_ticket_workflow_steps.py
backend/app/: __init__.py  audit.py  authz.py  config.py  database.py  deps.py  limiter.py  main.py
backend/app/api/: __init__.py  audit.py  auth.py  projects.py  tags.py  tickets.py
backend/app/core/: __init__.py  security.py
backend/app/crud/: audit_log.py  project.py  project_member.py  tag.py  ticket.py  ticket_workflow.py  user.py
backend/app/models/: __init__.py  audit_log.py  project.py  project_member.py  tag.py  team.py  ticket.py  ticket_workflow_step.py  user.py
backend/app/schemas/: audit.py  auth.py  project.py  tag.py  ticket.py
backend/app/utils/: search_escape.py
backend/scripts/: import_seed_utf8.py
backend/tests/: conftest.py  test_audit.py  test_tags.py  test_tickets.py
docs/: ARCHITECTURE.md  CHANGELOG.md  TESTING.md  api.md  setup.md  test.rest  user-guide.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  authEvents.ts  authStorage.ts  colorUtils.ts  utils.ts
frontend/src/store/: useAuthStore.ts  useTicketStore.ts
(+21 files in other folders)
